Add meta title and description

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -10,6 +10,7 @@
 </script>
 
 <head>
+    <meta name=”robots” content=”noindex, follow”>
     <meta http-equiv="refresh" content="0; url='https://docsplant.com/en/index.html'" />
 </head>
 
